fix loading title too long

--- a/src/app/styl/views/loading.styl
+++ b/src/app/styl/views/loading.styl
@@ -72,6 +72,8 @@
             font-size 16px
             line-height 20px
             padding-bottom 10px
+            text-overflow ellipsis
+            word-wrap break-word
 
         .external-play
             font-size 14px
